# ssh-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs  ratelimit.rs
src/config/: loader.rs  mod.rs  types.rs
src/mcp/: mod.rs  params.rs  prompts.rs  resources.rs  server.rs
src/ssh/: command.rs  connection.rs  handler.rs  manager.rs  mod.rs  typestate.rs
