[package]
name = "ssh-mcp"
version = "0.1.0"
edition = "2024"
authors = ["narthanaj"]
description = "A secure SSH server for the Model Context Protocol (MCP), enabling LLMs to execute commands on remote hosts"
license = "MIT"
repository = "https://github.com/narthanaj/ssh-mcp"
homepage = "https://github.com/narthanaj/ssh-mcp"
readme = "README.md"
keywords = ["mcp", "ssh", "llm", "ai", "remote-execution"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.85"

[dependencies]
# MCP server
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }

# SSH (russh::keys replaces the separate russh-keys crate — avoids type conflicts)
russh = { version = "0.54", features = ["aws-lc-rs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Security
secrecy = "0.10"
zeroize = { version = "1", features = ["derive"] }

# Command parsing
shlex = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
dashmap = "6"
regex = "1"
